Fix description part image overflow

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -178,6 +178,9 @@ body {
     .description {
       margin: 1.5rem 0 1rem 0;
       color: rgba(#000, 0.87);
+      img{
+        width: 100%;
+      }
     }
   }
 }
